--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ decorator==4.4.2
 distlib==0.3.1
 Django==3.1.4
 filelock==3.0.12
+gunicorn==20.0.4
 isort==5.6.4
 jedi==0.18.0
 lazy-object-proxy==1.4.3
